[project]
authors = [{ name = "V. A. Canales Lima", email = "victor-armando.canales1@estudiant.uib.cat" }]
dependencies = [
    "pydicom>=3.0.2,<4",
    "numpy>=2.4.6,<3",
    "matplotlib>=3.10.9,<4",
    "scikit-image>=0.26.0,<0.27",
    "simpleitk>=2.5.5,<3",
    "jupyterlab>=4.1.2",
    "jupyterlab-rise>=0.43.1,<0.44",
    "ipywidgets>=8.1.8,<9",
]
name = "mip"
requires-python = ">=3.11, <3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mip = { path = ".", editable = true }

[tool.pixi.tasks]
